# wl-android

./: .gitignore  BOUNDARIES.md  Cargo.toml  Dockerfile  INTEGRATION.md  PERFORMANCE_BOUNDARIES.md  QUICKSTART.md  README.en.md  README.md  rust-toolchain.toml
archlinux/: PKGBUILD  PKGBUILD.test-compositor
crates/landd/: Cargo.toml
crates/landd/src/: forwarder.rs  main.rs  socket_server.rs
crates/wl-android/: Cargo.toml
crates/wl-android-common/: Cargo.toml
crates/wl-android-common/src/: lib.rs  proto.rs  transport.rs
crates/wl-android-common/src/proto/: tests.rs
crates/wl-android-common/src/proto/snapshots/: wl_android_common__proto__tests__golden_ack.snap  wl_android_common__proto__tests__golden_config.snap  wl_android_common__proto__tests__golden_frame.snap  wl_android_common__proto__tests__golden_gone.snap  wl_android_common__proto__tests__golden_hello.snap  wl_android_common__proto__tests__golden_slot.snap  wl_android_common__proto__tests__golden_touch.snap
crates/wl-android-common/src/testutil/: fd_util.rs  mock_clock.rs  mod.rs
crates/wl-android/src/: ahb_handle.rs  app_link.rs  blit.rs  doctor.rs  frame_router.rs  main.rs  state.rs  touch.rs  transport.rs
crates/wl-android/src/comp/: dmabuf.rs  mod.rs
crates/wl-android/src/frame_router/: tests.rs
debian/: control
docs/: AGENTS.md  DESIGN.md  container-deployment.md  gnome45-setup.md  kde-full-desktop.md
land-app/: build-apk.sh  build.gradle.kts  settings.gradle.kts
m0/socket-smoke/: Cargo.toml
magisk-module/: module.prop  sepolicy.rule  service.sh
milestones/: DEVICE_TEST_PLAN.md  M2-verify.sh  M3-verify.sh  M4-verify.sh  M5-verify.sh  M6-verify.sh  M7-verify.sh
scripts/: build-all.sh  check-upstream.sh  container-probe.sh  m0-build.sh  mock-app.py  soak.sh
test-compositor/: Makefile  README.md  main.c
(+38 files in other folders)
