[package]
name = "landd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "landd"
path = "src/main.rs"

[dependencies]
land-common = { path = "../land-common" }
log = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[lints]
workspace = true
